ade the table scrollable horizontally on mobile devices, chart to fix the screen and dropdown button to only display the drop down icon

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,7 +3,7 @@
   margin: 5%;
   box-sizing: border-box;
   font-family: sans-serif;
-  min-width: 495px;
+  box-sizing: border-box;
 
   &-data-table,
   &-chart {
@@ -16,20 +16,48 @@
   &-drop-down-button {
     position: absolute;
   }
-}
 
+  @media(max-width: 575px){
+    & {
+      margin: 5% 0;
+    }
+    &-data-table {
+      padding: .5rem .5rem;
+    }
 
+  .data-table {
+      padding: .5rem .025rem;
 
-@media(min-width: 1240px){
-  .App {
-    margin: 5% 15%;
+      &__table {
+        overflow-x: scroll;
+      }
+    }
+
+    &-chart {
+      padding: .5rem 0.25rem;
+    }
   }
+
+  .drop-down--toggle {
+    font-size: 0;
+  }
+
+  .drop-down__icon {
+    padding-left: 0;
+  }
+
+  @media(min-width: 1240px){
+  & {
+      margin: 5% 15%;
+    }
+  }
+
 }
 
-@media(max-width: 575px){
-  .App {
-    margin: 5% 0;
-  }
-}
+
+
+
+
+
 
 
